Closed Bug 963026 Opened 10 years ago Closed 10 years ago

JavaScript Engine for AArch64

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: marcin, Unassigned)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch aarch64-jsengine.patch (obsolete) — Splinter Review
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:29.0) Gecko/20100101 Firefox/29.0 (Beta/Release)
Build ID: 20140122030521

Steps to reproduce:

This patch adds AArch64 support.
Blocks: 962534
Attachment #8364274 - Flags: review?(kvijayan)
I recently saw that Yarr has some more changes for AArch64 support. We should import those, probably.
Attachment #8364274 - Flags: review?(kvijayan) → review+
I'm planning on adding support to the jits, I'll probably start working on this in the middle of February.
Attached patch jsengine.patchSplinter Review
Attachment #8364274 - Attachment is obsolete: true
Attachment #8364985 - Flags: review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/599882cfb998
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: