Bug 963026 - AArch64 support for Javascript Engine. r=djvj